# db_toolchain

./: .gitignore  main.py  pyproject.toml
arm/: .layer_q_list  cnn_model.py  evaluation.txt  model.py  test.h5  test.py  weights.h
db_core/: pyproject.toml
db_graph/: README.md  install.sh  pip.sh  pyproject.toml
db_message/: README.md  dbm_module.json  pip.sh  pyproject.toml
db_message/src/db_message/: compiler.py  display.py  git_repository.py  main.py  module.py  register.py  repository.py  repository_manager.py  utils.py
db_message/src/db_message/compilers/: __init__.py  proto_compiler.py  text_compiler.py
db_train/: .gitignore  README.md  pip.sh  pyproject.toml  test.py
db_train/example/: imu_gesture_dataset.py
db_train/example/gesture/: run.sh  train.py
db_train/example/gesture_0/: config.yaml  config_train.py  imu_gesture_dataset.py  imu_gesture_dataset_numpy.py  imu_gesture_model.py  make_dataset.py  readme.md  run.sh  train.py
db_train/example/gesture_3axis/: imu_gesture_dataset.py  imu_gesture_model.py  train.py
db_train/example/phone/: imu_gesture_dataset.py  imu_gesture_model.py  run.sh
db_train/example/touch/: imu_gesture_dataset.py  run.sh  train.py
db_train/example/trajectory/: imu_trajectory_dataset.py  imu_trajectory_model.py  run.sh  train.py
db_train/src/db_train/: logger.py  metric.py  trainer.py
db_train/src/db_train/augment/: augmentor.py
db_train/src/db_train/data/: __init__.py
db_train/src/db_train/dataset/: bak_file_dataset.py  base_dataset.py  file_loader.py  hierarchical_dataset.py
db_train/src/db_train/utils/: data_utils.py  file_utils.py  window.py
db_zoo/: README.md  pip.sh  pyproject.toml
db_zoo/downsample/: demo.py
db_zoo/downsample/config/: config.json
db_zoo/src/db_zoo/model/: imu_gesture_model.py  imu_inception_model.py  imu_trajectory_model.py  quat_gesture_model.py  word_resnet_model.py
db_zoo/src/db_zoo/node/algorithm/: dynamic_gesture_detector.py  imu_stable_detector.py  static_gesture_detector.py  torch_node.py  trajectory_detector.py
db_zoo/src/db_zoo/node/commnicate/: tcp_client.py  tcp_server.py
db_zoo/src/db_zoo/node/device/: glove.py  gshx_ar.py  morph_touchpad.py  ring.py  ringV2.py  tello.py
db_zoo/src/db_zoo/node/filter/: smooth_flow.py
db_zoo/src/db_zoo/node/mock/: mock.py  mock_ring.py  printer.py
db_zoo/src/db_zoo/node/visualizer/: imu_visualizer.py  orientation_visualizer.py  pcm_visualizer.py  visualizer.py
db_zoo/src/db_zoo/utils/: byte.py  packet_wrapper.py  plotter.py  version.py  window.py
demo/: .gitignore
demo/commander/: commander.py  demo.py  drone_controller.py  drone_controller_v0.py  face_detector.py  frame_visualizer.py  object_detector.py  video_mock.py
demo/daily/: daily_recorder.py  demo.py
demo/demo_gesture/: demo.py  gesture_aggregator.py
demo/demo_mouse_ring/: demo.py  mouse_ring.py
demo/gesture/: demo.py  gesture_aggregator.py
demo/gesture_hz/: demo.py  gesture_detector.py  utils.py
demo/gesture_test/: demo.py  gesture_detector.py  gesture_test.py
demo/mouse_ring/: mouse_ring.py
demo/ringV2/: .gitignore  .gitingore  demo.py  plot_wav.py  receiver.py  scan.py
demo/ringV2_gesture/: demo.py  receiver.py  scan.py
demo/ringV2_mouse_ring/: demo.py
demo/tello/: demo.py  drone_controller.py  modify.py  scan.py
demo/visualizer/: demo.py
demo/word/: .gitignore  convert.py  demo.py  gesture_detector.py  madgwick_helper.py  post_to_google.txt  post_to_google_ime.py  touch_event.ptl
python/: .gitignore
python/core/: ble_ring.py  imu_data.py  imu_window.py  ring.py  ring_server.py  window.py
python/dataset/: data_processing.py  dataset.py  file_dataset.py  old_dataset.py
python/demo/: config.json  detector.py  evaluate.py  evaluate_glove.py  evaluate_new.py  evaluate_ring.py  evaluate_test.py
python/evaluate/: evaluate.py
python/model/: fully_connected.py  imu_gesture_model.py  imu_trajectory_model.py
python/record/: .gitignore  config.json  record.py  recorder.py
python/sensor/: __init__.py  basic_data.py  data_producer.py  device.py  glove.py  glove_data.py  imu_data.py  pool.py  ring.py  ring_ble.py  ring_pool.py
python/train/: .gitignore  imu_gesture_dataset.py  imu_trajectory_dataset.py  metric.py  quat_gesture_dataset.py  train.py  train_gesture.py  train_glove.py  train_imu_gesture.py  train_imu_trajectory.py  train_quat_gesture.py  train_ring.py  train_trajectory.py  trainer.py
python/utils/: counter.py  crc.py  data_utils.py  logger.py  register.py  window.py
record/: main.py
src/db_toolchain/: demo.py
todo/: 1.pdm  2.pdm  _todo_visualizer.py  ring.py  ring_modify_mac.py
todo/device/: __init__.py  (+1 more)
(+160 files in other folders)
