[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolchain_db"
version = "0.0.1"
authors = [
  { name="Euxcet", email="zcc.qwer@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/euxcet/toolchain_db"
