[project]
name = "db_toolchain"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "euxcet", email = "zcc.qwer@gmail.com"},
]
dependencies = [
    "colorlog>=6.8.0",
    "numpy>=1.26.3",
    "multipledispatch>=1.0.0",
    "torch>=2.1.2",
    "pyquaternion>=0.9.9",
    "bleak>=0.20.2",
    "pynput>=1.7.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
