[project]
name = "db_message"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "euxcet", email = "zhouchengchi@qiyuanlab.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
