[project]
name = "db_message"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "euxcet", email = "zhouchengchi@qiyuanlab.com"},
]
dependencies = [
    "protobuf>=4.25.2",
    "click>=8.1.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"

[project.scripts]
dbm = "db_message.main:cli"

[tool.pdm.scripts]
dbm = {call = "db_message.main:cli"}
