[project]
name = "db_train"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "euxcet", email = "zhouchengchi@qiyuanlab.com"},
]
dependencies = [
    "torch>=2.2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
