[project]
name = "db_zoo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "euxcet", email = "zhouchengchi@qiyuanlab.com"},
]
dependencies = [
    "packaging>=23.2",
    "importlib-metadata>=7.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
distribution = true
