[project]
name = "db_zoo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "euxcet", email = "zhouchengchi@qiyuanlab.com"},
]
dependencies = [
    "packaging>=23.2",
    "importlib-metadata>=7.0.1",
    "typing-extensions>=4.10.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../db_graph#egg=db-graph",
]
